[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiomost"
version = "0.1.0"
description = "Asynchronous Python library for Mattermost bot development"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["mattermost", "bot", "async", "asyncio", "chat"]
requires-python = ">=3.8"
dependencies = [
    "aiohttp>=3.8.0",
    "asyncio-mqtt>=0.11.0",
    "pydantic>=2.0.0",
    "python-dotenv>=0.19.0",
    "websockets>=10.0",
    "fastapi>=0.68.0",
    "uvicorn[standard]>=0.15.0",
    "redis>=4.0.0",
    "httpx>=0.24.0",
]
[project.optional-dependencies]
fastapi = [
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "pre-commit>=2.17.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/aiomost"
Repository = "https://github.com/yourusername/aiomost.git"
Issues = "https://github.com/yourusername/aiomost/issues"
Documentation = "https://github.com/yourusername/aiomost#readme"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
